<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:padding="@dimen/card_padding">

        <TextView
            android:id="@+id/textItem"
            style="@style/TextViewStyle"
            android:text="@string/item" />

        <ImageView
            android:id="@+id/iconEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iconDelete"
            android:contentDescription="@string/icon_edit"
            app:srcCompat="@drawable/ic_edit_white" />

        <ImageView
            android:id="@+id/iconDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/button_margin"
            android:contentDescription="@string/icon_delete"
            app:srcCompat="@drawable/ic_del_white" />

    </RelativeLayout>
</android.support.v7.widget.CardView>

