<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.nemanja.sqlitetodolist.MainActivity">

    <EditText
        android:id="@+id/editTextItem"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        style="@style/LinearLayoutStyle"
        android:layout_below="@id/editTextItem"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonSave"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonEdit"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonCancel"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:visibility="gone" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        style="@style/RecyclerViewStyle"
        android:layout_below="@+id/linearLayoutButton" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FabStyle"
        android:src="@drawable/ic_add_white_24dp" />

</RelativeLayout>
